@@ -315,24 +315,6 @@ Dadmin *next_admin(void)
 
 /*************************************************************************/
 
-static int is_md5(char *passwd)
-{
-	int count;
-	const char *ch;
-	const char *valid = "0123456789abcdefABCDEF";
-
-	if (strlen(passwd) != 32)
-		return 0;
-
-	for (count = 0;count < strlen(passwd);count++)
-	{
-		ch = &passwd[count];
-		if (strstr(valid, ch))
-			return 0;
-	}
-	return 1;
-}
-
 int add_sqladmin(char *name, char *passwd, int level, char *host, int lang)
 {
 
@@ -347,18 +329,15 @@ int add_sqladmin(char *name, char *passwd, int level, char *host, int lang)
 		return -1;
 	}
 
-	if (is_md5(passwd))
-	{
-		rdb_query(QUERY_LOW,
-			  "INSERT INTO %s (uname, passwd, level, host, lang) VALUES ('%s', '%s', %d, '%s', %d)",
-			  AdminTable, name, passwd, level, host, lang);
-	}
-	else
-	{
-		rdb_query(QUERY_LOW,
-		          "INSERT INTO %s (uname, passwd, level, host, lang) VALUES ('%s', MD5('%s'), %d, '%s', %d)",
-		          AdminTable, name, passwd, level, host, lang);
-	}
+#ifdef HAVE_CRYPT
+	rdb_query(QUERY_LOW,
+		  "INSERT INTO %s (uname, passwd, level, host, lang) VALUES ('%s', '%s', %d, '%s', %d)",
+		  AdminTable, name, passwd, level, host, lang);
+#else
+	rdb_query(QUERY_LOW,
+	          "INSERT INTO %s (uname, passwd, level, host, lang) VALUES ('%s', MD5('%s'), %d, '%s', %d)",
+	          AdminTable, name, passwd, level, host, lang);
+#endif
 
 #ifdef USE_MYSQL
 	mysql_res = mysql_store_result(mysql);
@@ -417,20 +396,17 @@ void reset_sqladmin(void)
 		{
 			for (a = adminlists[i]; a; a = a->next)
 			{
-				if (is_md5(a->passwd))
-				{
-					rdb_query(QUERY_LOW,
-					          "INSERT INTO %s (uname, passwd, level, host, lang) VALUES ('%s', '%s', %d, '%s', %d)",
-					          AdminTable, a->name, a->passwd, a->configfile,
-					          a->hosts[0], a->language);
-				}
-				else
-				{
-					rdb_query(QUERY_LOW,
-                                                  "INSERT INTO %s (uname, passwd, level, host, lang) VALUES ('%s', MD5('%s'), %d, '%s', %d)",
-                                                  AdminTable, a->name, a->passwd, a->configfile,
-                                                  a->hosts[0], a->language);
-				}
+#ifdef HAVE_CRYPT
+				rdb_query(QUERY_LOW,
+				          "INSERT INTO %s (uname, passwd, level, host, lang) VALUES ('%s', '%s', %d, '%s', %d)",
+				          AdminTable, a->name, a->passwd, a->configfile,
+				          a->hosts[0], a->language);
+#else
+				rdb_query(QUERY_LOW,
+                                          "INSERT INTO %s (uname, passwd, level, host, lang) VALUES ('%s', MD5('%s'), %d, '%s', %d)",
+                                          AdminTable, a->name, a->passwd, a->configfile,
+                                          a->hosts[0], a->language);
+#endif
 			}
 		}
 	}
